--- a/Normal Page/Styles.css
+++ b/Normal Page/Styles.css
@@ -42,15 +42,8 @@ body{
 	object-fit: contain;
 }
 .form-control{
-	background-color: transparent!important;
+	background-color: white!important;
 	border: 2px solid white;
-}
-.custom-form{
-	border-left: 0px;
-    border-top: 0px;
-    border-right: 0px;
-    border-radius: 0;
-
 }
 .font-color{
 	color: white;
